--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#e30b14"
-backgroundColor = "#ffebeb"
-secondaryBackgroundColor = "#f8d6d5"
-textColor = "#3f3f3f"
+base="light"
+primaryColor="#e30b14"
+secondaryBackgroundColor="#f8d6d5"
+textColor="#3f3f3f"
