--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 base="light"
 primaryColor="#e30b14"
-secondaryBackgroundColor="#f8d6d5"
+secondaryBackgroundColor="#f5f5f5"
 textColor="#3f3f3f"
